# Blackmagic_Decklink_API_examples

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
.github/workflows/: main.yml
api_includes/: README.md
docs/: DesktopVideoSDKManual.pdf.txt
status_reports/: Blackmagic_Desktop_Video_Status_Report_2025-01-11_17-01-24.html  Blackmagic_Desktop_Video_Status_Report_2025-01-11_17-12-11.html  Blackmagic_Desktop_Video_Status_Report_2025-01-11_19-04-04.html
